# actions-boost-setup

./: .gitignore  CMakeLists.txt  README.md  setup.py
.github/workflows/: print_hello.yaml
python_bind_example/: CMakeLists.txt
python_bind_example/src/: actions.cpp
test/: test.py
